--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
+    "@material-tailwind/react": "^2.1.10",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "d3": "^7.9.0",
